--- a/Translator Web App/templates/index.html
+++ b/Translator Web App/templates/index.html
@@ -1,21 +1,14 @@
-<!doctype html>
-<html lang="en">
+{% extends "layout.html" %}
+{% block content %}
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css')}}">
 
-    <title>Sign Language Translator</title>
+    {% block title %}Sign Language Translator{% endblock %}
 
 </head>
 
 <body class="container">
-    <header>
-            <h1>Sign Language Translator </h1>
-    </header>
-
     <div class="feed_container">
         <img class="feed_container"src="{{ url_for('translator_feed') }}">
     </div>
@@ -24,6 +17,8 @@
         <h2>Translation</h2>
 
         <textarea>{{  data  }} </textarea>
+
+
     </div>
 
     <div class="information">
@@ -38,6 +33,8 @@
     </div>
 
 
+
+
 </body>
 
-</html>
+{% endblock %}
