--- a/Translator Web App/templates/about.html
+++ b/Translator Web App/templates/about.html
@@ -42,7 +42,7 @@
           <p>
               In the modern world, communication is necessary to be able to express opinions, pass on information, understand what is said to us. Therefore, people who have hearing and speaking disabilities may struggle to communicate with others. Sign language has allowed people to be able to learn a new language and communicate with others but learning sign language can be difficult and speaking to people will require them to know sign language.
               Sign language is a method of communication using hands and gestures to be able to express words and letters mainly used by people who are deaf and mute. In Britain over one hundred and fifty thousand people use sign language (Help & Resources - British Deaf Association, 2021) and over 70 million people use sign language in the whole world (Kozik, 2019).
-              For my project, I have decided to create a sign language translator that would be able to help those who have learned sign language to be able to communicate with people easier and for people who have not learned sign language to be able to understand sign language.}
+              For my project, I have decided to create a sign language translator that would be able to help those who have learned sign language to be able to communicate with people easier and for people who have not learned sign language to be able to understand sign language.
           </p>
       <h1>Aims</h1>
         <p>
