--- a/Translator Web App/templates/about.html
+++ b/Translator Web App/templates/about.html
@@ -13,7 +13,7 @@
 
 }
 .about_header {
-  padding: 20px;
+  padding: 50px;
   text-align: center;
   background: #474e5d;
   color: white;
@@ -25,6 +25,8 @@
 .content p{
     color: black;
     font-size: 18px;
+    font-weight: bold;
+
 }
 .content h1{
     color: #152f5f;
