--- a/Translator Web App/templates/about.html
+++ b/Translator Web App/templates/about.html
@@ -57,6 +57,8 @@
         <p>
             #2 https://www.kaggle.com/ayuraj/asl-dataset
         </p>
+        <h1>Neural Network Structure</h1>
+        <img src="{{url_for('static', filename='Neural Network Diagram.png')}}" align="middle" />
         <h1>References</h1>
         <p>
             British Deaf Association. 2021. Help & Resources - British Deaf Association. [online] Available at: https://bda.org.uk/help-resources/ [Accessed 15 October 2021].
